--- a/Vocabulary.WEB/NLog.config
+++ b/Vocabulary.WEB/NLog.config
@@ -6,36 +6,25 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-  <variable name="myvar" value="myvalue"/>
-
-  <!--
-  See https://github.com/nlog/nlog/wiki/Configuration-file
-  for information on customizing logging rules and outputs.
-   -->
+  <variable name="logDirectory" value="${basedir}/App_Data/Logs/${shortdate}" />
   <targets>
 
-    <!--
-    add your targets here
-    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
-    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
-    -->
-
-    <!--
-    Write events to a file with the date in the filename.
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
+    <target name="fileLogTrace" xsi:type="File" fileName="${logDirectory}/Trace.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${logger}|${message}" />
+    <target name="fileLogDebug" xsi:type="File" fileName="${logDirectory}/Debug.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${logger}|${message}" />
+    <target name="fileLogInfo" xsi:type="File" fileName="${logDirectory}/Info.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${logger}|${message}" />
+    <target name="fileLogError" xsi:type="File" fileName="${logDirectory}/ErrorsAndWarns.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${logger}|${message}" />
+    <target name="fileLogPerformanceAndIps" xsi:type="File" fileName="${logDirectory}/PerformanceAndIps.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${message}" />
+    <target name="fileLogAll" xsi:type="File" fileName="${logDirectory}/AllLogs.log" layout="${activityid}|${longdate}|${level:uppercase=true}|${logger}|${message}" />
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
-
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
+    <logger name="*" minlevel="Trace" writeTo="fileLogAll" />
+    <logger name="*" level="Trace" writeTo="fileLogTrace" />
+    <logger name="*" level="Debug" writeTo="fileLogDebug" />
+    <logger name="*" level="Info" writeTo="fileLogInfo" />
+    <logger name="Filter logging" minlevel="Info" writeTo="fileLogInfo" />
+    <logger name="*" minlevel="Warn" writeTo="fileLogError" />
+    <logger name="Filter logging" maxlevel="Debug" writeTo="fileLogPerformanceAndIps" />
   </rules>
+
 </nlog>
